--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <!-- Your code here -->
+    <p>this flower is beautifull </p>
+    <img src="./images/my flower.png" alt="flower">
   </body>
 </html>
